// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReferenceForm /> should render when [errorFile!=null] 1`] = `
<div>
  <div
    className="input-form-error"
  >
    <span
      className="input-error-message"
      style={
        Object {
          "margin": "0 0 0 0",
        }
      }
    >
      foo
    </span>
  </div>
  <Form__ReferenceFormInputs
    mode="clone"
  >
    <InputError
      error="baz"
      label="Name"
      name="name"
      onChange={[MockFunction]}
      value="fee"
    />
  </Form__ReferenceFormInputs>
  <InputError
    label="Description"
    name="description"
    onChange={[MockFunction]}
    type="textarea"
    value="Foo"
  />
</div>
`;

exports[`<ReferenceForm /> should render when [errorFile=null] and [errorSelect=null] 1`] = `
<div>
  <Form__ReferenceFormInputs
    mode="clone"
  >
    <InputError
      error="baz"
      label="Name"
      name="name"
      onChange={[MockFunction]}
      value="fee"
    />
  </Form__ReferenceFormInputs>
  <InputError
    label="Description"
    name="description"
    onChange={[MockFunction]}
    type="textarea"
    value="Foo"
  />
</div>
`;

exports[`<ReferenceForm /> should render when [mode=create] 1`] = `
<div>
  <div
    className="input-form-error"
  >
    <span
      className="input-error-message"
      style={
        Object {
          "margin": "0 0 0 0",
        }
      }
    >
      foo
    </span>
  </div>
  <Form__ReferenceFormInputs
    mode="create"
  >
    <InputError
      error="baz"
      label="Name"
      name="name"
      onChange={[MockFunction]}
      value="fee"
    />
    <InputError
      label="Organism"
      name="organism"
      onChange={[MockFunction]}
      value="Bar"
    />
  </Form__ReferenceFormInputs>
  <InputError
    label="Description"
    name="description"
    onChange={[MockFunction]}
    type="textarea"
    value="Foo"
  />
</div>
`;
